tests/semantic/invalid/duplicate_function.src
fn foo() -> void {}
fn foo() -> int {}