tests/semantic/invalid/duplicate_function.expected
semantic error at duplicate_function.src:2:1: duplicate function declaration 'foo'